Very early commit for testing #2

--- a/en.html
+++ b/en.html
@@ -7,19 +7,19 @@
 </head>
 <body bgcolor="#3b3b3b">
 	<div class="head">
-		<p title="El mejor server del mundo" id="title">El Medievo</p>
+		<p title="The best server of the world" id="title">El Medievo</p>
 		<div class="refs">
 			<a class="ref" title="Server Staff" href="sections/es/staff.html" target="blank">Staff</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Reglas</a>
+			<a class="ref">Rules</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Tienda</a>
+			<a class="ref">Shop</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
@@ -33,13 +33,13 @@
 		</div>
 		<hr id="spacer"/>
 		<div class="langs">
-			<a class="lang_ref" href="en.html">EN</a>
+			<a class="lang_ref" href="#">EN</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a class="lang_ref" href="fr.html">FR</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="lang_ref" href="#">ES</a>
+			<a class="lang_ref" href="index.html">ES</a>
 			<script src="scripts/copy.js"></script>
 			<p><a class="ref" id="ip" title="Click to copy!" href=" " onclick="copyToClipboard('ip')">medievo.sytes.net:26448</a></p>
 		</div>
