--- a/fr.html
+++ b/fr.html
@@ -14,12 +14,12 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Reglas</a>
+			<a class="ref">Les règles</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Tienda</a>
+			<a class="ref">Boutique</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
@@ -36,10 +36,10 @@
 			<a class="lang_ref" href="en.html">EN</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="lang_ref" href="fr.html">FR</a>
+			<a class="lang_ref" href="#">FR</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="lang_ref" href="#">ES</a>
+			<a class="lang_ref" href="index.html">ES</a>
 			<script src="scripts/copy.js"></script>
 			<p><a class="ref" id="ip" title="Click to copy!" href=" " onclick="copyToClipboard('ip')">medievo.sytes.net:26448</a></p>
 		</div>
