--- a/sections/en/staff.html
+++ b/sections/en/staff.html
@@ -14,17 +14,17 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Reglas</a>
+			<a class="lang_ref" class="ref">Rules</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Tienda</a>
+			<a class="lang_ref" class="ref">Shop</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref" title="Server Development" href="https://github.com/ElMedievo" target="blank">Github</a>
+			<a class="lang_ref" class="ref" title="Server Development" href="https://github.com/ElMedievo" target="blank">Github</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
@@ -33,22 +33,22 @@
 		</div>
 		<hr id="spacer"/>
 		<div class="langs">
-			<a class="lang_ref" href="../en/staff.html"">EN</a>
+			<a class="lang_ref" href="#">EN</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a class="lang_ref" href="../fr/staff.html">FR</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="lang_ref" href="#">ES</a>
+			<a class="lang_ref" href="../es/staff.html">ES</a>
 			<script src="scripts/copy.js"></script>
 		</div>
 	</div>
 	<div class="staff_title">
 		<p id="staff">Staff&nbsp;</p>
-		<p id="staff_desc">Jugadores que ayudan a llevar y mantener el servidor medieval</p>
+		<p id="staff_desc">Players who help to maintain the medieval server</p>
 	</div>
 	<div class="admins">
-		<p>Administradores</p>
+		<p>Administrators</p>
 		<hr/>
 	</div>
 	<div>
@@ -57,7 +57,7 @@
 	</div>
 	<div class="devs">
 		<a>&nbsp;</a>
-		<p>Desarrolladores</p>
+		<p>Developers</p>
 		<hr/>
 	</div>
 	<div>
@@ -68,7 +68,7 @@
 	</div>
 	<div class="sr_mods">
 		<a>&nbsp;</a>
-		<p>Senior Mods</p>
+		<p>Senior Moderators</p>
 		<hr/>
 	</div>
 	<div>
@@ -77,7 +77,7 @@
 	</div>
 	<div class="mods">
 		<a>&nbsp;</a>
-		<p>Moderadores</p>
+		<p>Moderators</p>
 		<hr/>
 	</div>
 	<div>
@@ -91,7 +91,7 @@
 	<br/>
 	<br/>
 	<div class="jr_mods">
-		<p>Junior Mods</p>
+		<p>Junior Moderators</p>
 		<hr/>
 	</div>
 	<div>
