--- a/sections/fr/staff.html
+++ b/sections/fr/staff.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Staff</title>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="../../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../../css/staff.css">
 </head>
@@ -14,12 +15,12 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Reglas</a>
+			<a class="ref">Les règles</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Tienda</a>
+			<a class="ref">Boutique</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
@@ -36,19 +37,19 @@
 			<a class="lang_ref" href="../en/staff.html"">EN</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="lang_ref" href="../fr/staff.html">FR</a>
+			<a class="lang_ref" href="#">FR</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="lang_ref" href="#">ES</a>
+			<a class="lang_ref" href="../es/staff.html">ES</a>
 			<script src="scripts/copy.js"></script>
 		</div>
 	</div>
 	<div class="staff_title">
 		<p id="staff">Staff&nbsp;</p>
-		<p id="staff_desc">Jugadores que ayudan a llevar y mantener el servidor medieval</p>
+		<p id="staff_desc">Les joueurs qui aident à porter et à maintenir le serviteur médiéval</p>
 	</div>
 	<div class="admins">
-		<p>Administradores</p>
+		<p>Administrateurs</p>
 		<hr/>
 	</div>
 	<div>
@@ -57,7 +58,7 @@
 	</div>
 	<div class="devs">
 		<a>&nbsp;</a>
-		<p>Desarrolladores</p>
+		<p>Développeurs</p>
 		<hr/>
 	</div>
 	<div>
@@ -77,7 +78,7 @@
 	</div>
 	<div class="mods">
 		<a>&nbsp;</a>
-		<p>Moderadores</p>
+		<p>Modérateurs</p>
 		<hr/>
 	</div>
 	<div>
