Fix redirect issues

--- a/en.html
+++ b/en.html
@@ -9,7 +9,7 @@
 	<div class="head">
 		<p title="The best server of the world" id="title">El Medievo</p>
 		<div class="refs">
-			<a class="ref" title="Server Staff" href="sections/es/staff.html" target="blank">Staff</a>
+			<a class="ref" title="Server Staff" href="sections/en/staff.html" target="blank">Staff</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
