--- a/fr.html
+++ b/fr.html
@@ -9,7 +9,7 @@
 	<div class="head">
 		<p title="El mejor server del mundo" id="title">El Medievo</p>
 		<div class="refs">
-			<a class="ref" title="Server Staff" href="sections/es/staff.html" target="blank">Staff</a>
+			<a class="ref" title="Server Staff" href="sections/fr/staff.html" target="blank">Staff</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
