--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Reglas</a>
+			<a class="ref" href="sections/es/rules.html">Reglas</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
