--- a/sections/fr/staff.html
+++ b/sections/fr/staff.html
@@ -8,9 +8,9 @@
 </head>
 <body bgcolor="#3b3b3b">
 	<div class="head">
-		<p title="El mejor server del mundo" id="title">El Medievo</p>
+		<p title="El mejor server del mundo" id="title"><a class="home_ref" href="../../fr.html">El Medievo</a></p>
 		<div class="refs">
-			<a class="ref" title="Server Staff" href="sections/es/staff.html" target="blank">Staff</a>
+			<a class="ref" title="Server Staff" href="" target="blank">Staff</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
