--- a/sections/es/rules.html
+++ b/sections/es/rules.html
@@ -64,6 +64,30 @@
 		<div class="letter_section">
 			<p>B. Modificaciones al cliente:</p>
 		</div>
+		<div class="diamond_section">
+			<p>❖ Modificaciones no permitidas por la comunidad medieval:</p>
+		</div>
+		<div class="rules_enum">
+			<ol>
+				<li>Mods que faciliten la minería revelando la ubicación de menas y mazmorras tales como X-Ray, texture packs maliciosos, entre otros.</li>
+				<li>Mods que proyecten minimapas que alteren las interacciones entre jugadores revelando ubicaciones de cofres, hornos,  jugadores, entidades, etc.</li>
+				<li>Modificaciones que arruinen la experiencia de juego de la comunidad tales como vuelo, reach, velocity o knockback reducer, obtención y clonación de objetos y entidades.</li>
+			</ol>
+		</div>
+		<br/>
+		<div class="diamond_section">
+			<p>❖ Modificaciones permitidas por la comunidad medieval:</p>
+		</div>
+		<div class="rules_enum">
+			<ol>
+				<li>Mods que faciliten la minería revelando la ubicación de menas y mazmorras tales como X-Ray, texture packs maliciosos, entre otros.</li>
+				<li>Mods que proyecten minimapas que alteren las interacciones entre jugadores revelando ubicaciones de cofres, hornos,  jugadores, entidades, etc.</li>
+				<li>Modificaciones que arruinen la experiencia de juego de la comunidad tales como vuelo, reach, velocity o knockback reducer, obtención y clonación de objetos y entidades.</li>
+			</ol>
+		</div>
+		<div class="letter_section">
+			<p>C.  Política de combate (PvP):</p>
+		</div>
 	</div>
 </body>
 </html>
