--- a/fr.html
+++ b/fr.html
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="#3b3b3b">
 	<div class="head">
-		<p title="El mejor server del mundo" id="title">El Medievo</p>
+		<p id="title">El Medievo</p>
 		<div class="refs">
 			<a class="ref" title="Server Staff" href="sections/fr/staff.html" target="blank">Staff</a>
 			<a>&nbsp;</a>
