--- a/sections/en/rules.html
+++ b/sections/en/rules.html
@@ -8,19 +8,19 @@
 </head>
 <body bgcolor="#3b3b3b">
 	<div class="head">
-		<p id="title" title="El mejor server del mundo"><a class="home_ref" href="../../index.html">El Medievo</a></p>
+		<p id="title"><a class="home_ref" href="../../en.html">El Medievo</a></p>
 		<div class="refs">
 			<a class="ref" title="Server Staff" href="staff.html">Staff</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref" href="">Reglas</a>
+			<a class="ref" href="">Rules</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Tienda</a>
+			<a class="ref">Shop</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
@@ -30,17 +30,17 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref" title="Server Discord" href="https://discord.gg/cV52Tc">Discord</a>
+			<a class="ref" title="Discord server" href="https://discord.gg/cV52Tc">Discord</a>
 		</div>
 		<hr id="spacer"/>
 		<div class="langs">
-			<a class="lang_ref" href="../en/rules.html">EN</a>
+			<a class="lang_ref" href="">EN</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a class="lang_ref" href="../fr/rules.html">FR</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="lang_ref" href="">ES</a>
+			<a class="lang_ref" href="../es/rules.html">ES</a>
 		</div>
 		<div class="text_title">
 			<p align="center"><u>Reglamento Medieval</u></p>
