--- a/sections/es/staff.html
+++ b/sections/es/staff.html
@@ -9,7 +9,7 @@
 	<div class="head">
 		<p title="El mejor server del mundo" id="title"><a class="home_ref" href="../../index.html">El Medievo</a></p>
 		<div class="refs">
-			<a class="ref" title="Server Staff" href="" target="blank">Staff</a>
+			<a class="ref" title="Server Staff" href="">Staff</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
