Add rules translation

--- a/en.html
+++ b/en.html
@@ -14,7 +14,7 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Rules</a>
+			<a class="ref" href="sections/en/rules.html">Rules</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
