--- a/fr.html
+++ b/fr.html
@@ -14,7 +14,7 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Les règles</a>
+			<a class="ref" href="sections/fr/rules.html">Les règles</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
