--- a/sections/en/rules.html
+++ b/sections/en/rules.html
@@ -46,84 +46,84 @@
 			<p align="center"><u>Reglamento Medieval</u></p>
 		</div>
 		<div class="letter_section">
-			<p>A. Chat y compostura medieval:</p>
+			<p>A. Chat & Medieval composure:</p>
 		</div>
 		<div class="rules_enum">
 			<ol>
-			  <li>Siempre tener presente el sentido común.</li>
-			  <li>Ser un caballero (Respetuoso y siempre preservando el honor).</li>
-			  <li>El spam o flood en el chat están estrictamente prohibidos.</li>
-			  <li>La regla nº3 abarca, pero no está limitada a: Pasar la ip de otros servidores como forma de publicidad (entiéndase que mandar una ip por /msg a un amigo está permitido, pero siempre con buena intención), enviar mensajes repetidas veces al chat, compartir links o enlaces que lleven a contenido pornografico, gore, etc...</li>
-			  <li>Los insultos raciales y xenófobos no están permitidos en ningún caso.</li>
-			  <li>Mantener un ambiente calmado y relajado en el chat.</li>
-			  <li>Acosar o molestar reiteradamente a otros jugadores está penalizado y será castigado.</li>
-			  <li>Incentivar el suicidio y la autoflagelación está prohibido.</li>
-			  <li>El pretender formar parte del prestigioso staff del medievo no está permitido bajo ninguna circunstancia.</li>
+			  <li>Always follow your common sense.</li>
+			  <li>Be a gentleman (Respectful, and always looking forward to preserve your honor).</li>
+			  <li>Any kind of Spam or Flood in chat is strictly forbidden.</li>
+			  <li>Rule Nº3 includes, but is not limited to: Giving out the ip of other servers as a way of advertising , sending the same or similar messages repeatedly in chat, sharing malicious links (pron, gore, etc..), among others.</li>
+			  <li>Racial and xenophobic insults are not tolerated.</li>
+			  <li>Keep a calm atmosphere in chat.</li>
+			  <li>Harassing or repeatedly bothering other players is not tolerated.</li>
+			  <li>Suicide encouragement is absolutely not legal and will be severely punished.</li>
+			  <li>Staff impersonation is not allowed (To intentionally pretend being part of the server staff).</li>
 			</ol>
 		</div>
 		<div class="letter_section">
-			<p>B. Modificaciones al cliente:</p>
+			<p>B. Client Modifications:</p>
 		</div>
 		<div class="diamond_section">
-			<p>❖ Modificaciones no permitidas por la comunidad medieval:</p>
+			<p>❖ Forbidden modifications:</p>
 		</div>
 		<div class="rules_enum">
 			<ol>
-				<li>Mods que faciliten la minería revelando la ubicación de menas y mazmorras tales como X-Ray, texture packs maliciosos, entre otros.</li>
-				<li>Mods que proyecten minimapas que alteren las interacciones entre jugadores revelando ubicaciones de cofres, hornos,  jugadores, entidades, etc.</li>
-				<li>Modificaciones que arruinen la experiencia de juego de la comunidad tales como vuelo, reach, velocity o knockback reducer, obtención y clonación de objetos y entidades.</li>
+				<li>Any kind of “mining-assistance” tools. I.e: X-Ray, texture packs which reveal ores locations, etc...</li>
+				<li>Minimaps that may reveal the location of players, chests, etc...</li>
+				<li>Any kind of unfair advantage in general: Fly, Velocity, Reach, etc...</li>
 			</ol>
 		</div>
 		<br/>
 		<div class="diamond_section">
-			<p>❖ Modificaciones permitidas por la comunidad medieval:</p>
+			<p>❖ Allowed modifications:</p>
 		</div>
 		<div class="rules_enum">
 			<ol>
-				<li>Uso de texture packs diseñados para el PvP y mejorar el rendimiento.</li>
-				<li>Uso de modificaciones que permitan alterar la configuración del juego de manera más avanzada con el fin de mejorar el rendimiento tales como Optifine.</li>
+				<li>Texture packs used to improve gameplay.</li>
+				<li>Mods like OptiFine.</li>
 			</ol>
 		</div>
 		<div class="letter_section">
-			<p>C.  Política de combate (PvP):</p>
+			<p>C. Combat Policy (PvP):</p>
 		</div>
 		<div class="rules_enum">
 			<ol>
-				<li>En el servidor, se fijará una fecha límite, después de la cual los habitantes medievales pasarán de estar viviendo en temporada de paz armada o preparación pacífica, a una de guerra, desesperación y catástrofe mundial.</li>
-				<li>El pvp antes del inicio de temporada está permitido; sin embargo, se le recomienda a los usuarios pactar tratados delimitadores de relaciones políticas antes de involucrarse en un conflicto.</li> 
-				<li>El pvp dentro de temporada está absolutamente permitido. De hecho, se alienta a los usuarios a formar parte del altercado mundial que éste supone, y promover la llegada de su imperio a lo más alto de la historia medieval.</li>
+				<li>On the server, a deadline will be set. Passed it's limit, the medieval players will move from being on the armed peace season to be entering a new war, desperation and mundial catastrophe season.</li>
+				<li>The pvp before war season's beggining is allowed, yet it's encouraged to users that they pact limits and treats between empires before getting involved in a conflict.</li> 
+				<li>The pvp within war season is absolutely permitted. In fact, we encourage players to take part in the mundial crisis, and to promote their empire's arrival to the top of the medieval history.</li>
 			</ol>
 		</div>
 		<div class="letter_section">
-			<p>D. Tenencia de propiedades:</p>
+			<p>D. Ownership of properties:</p>
 		</div>
 		<div class="rules_enum">
 			<ol>
-				<li>Cada jugador tiene derecho a privatizar terrenos de hasta 2500 bloques.</li>
-				<li>En periodos de guerra la protección de los terrenos se deshabilitará, causando que otros jugadores puedan dañar libremente este, asimismo como tu a los demás.</li>
-				<li>El máximo de adquisición para los terrenos es de 5000, los cuales podrán ser aprovechados de la manera en que el dueño desee.</li>
+				<li>Every player is allowed to claim 2500 blocks by default.</li>
+				<li>In war periods, claim protection will be turned off, allowing other players to destroy your terrains.</li>
+				<li>The maximum amount of claim blocks you may own is 5000.</li>
 			</ol>
 		</div>
 		<div class="letter_section">
-			<p>E. Normativa de clanes:</p>
+			<p>E. Clans Normative:</p>
 		</div>
 		<div class="diamond_section">
-			<p>❖ Creación de clanes:</p>
+			<p>❖ Clans creation:</p>
 		</div>
 		<div class="rules_enum">
 			<ol>
-				<li>Todos los clanes con nombres escritos presionando teclas aleatoriamente (Ejemplo: tghjhgvbnmklsd) serán eliminados.</li>
-				<li>Cualquier expresión de odio expuesta en el nombre de un clan provocará la eliminación de éste y podría ser acompañada de una sanción para su fundador dependiendo de la magnitud de ésta.</li>
-				<li>No utilizar el nombre de un clan como medio para la promoción de otros servidores, links, páginas o productos.</li>
+				<li>Any clan names like "fljwouhwifdsg" will be eliminated. Please chose an appropriate name.</li>
+				<li>Chat & Medieval composure ruleset applies to clan names as well, so read carefully.</li>
+				<li>We encourage players to choose medieval names for their clans. I.e: España".</li>
 			</ol>
 		</div>
 		<div class="diamond_section">
-			<p>❖ Normas internas de los clanes:</p>
+			<p>❖ Clans internal rules:</p>
 		</div>
 		<div class="rules_enum">
 			<ol>
-				<li>Las normas e interacciones dentro de un clan están basadas completamente en la confianza y en la lealtad.</li>
-				<li>Cada clan es responsable de los actos que cualquier miembro del mismo pueda realizar dentro del servidor.</li>
+				<li>The rules and interactions within clans are completely based on trust and loyalty.</li>
+				<li>Every clan is responsible of any action taken by any of it's members.</li>
 			</ol>
 		</div>
 	</div>
