Update discord invites

--- a/sections/fr/staff.html
+++ b/sections/fr/staff.html
@@ -30,7 +30,7 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref" title="Server Discord" href="https://discord.gg/wnSFYE">Discord</a>
+			<a class="ref" title="Server Discord" href="https://discord.gg/Grym3EY">Discord</a>
 		</div>
 		<hr id="spacer"/>
 		<div class="langs">
