--- a/sections/en/rules.html
+++ b/sections/en/rules.html
@@ -30,7 +30,7 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref" title="Discord server" href="https://discord.gg/cV52Tc">Discord</a>
+			<a class="ref" title="Discord server" href="https://discord.gg/Grym3EY">Discord</a>
 		</div>
 		<hr id="spacer"/>
 		<div class="langs">
