--- a/en.html
+++ b/en.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Home</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 <body bgcolor="#3b3b3b">
 	<div class="head">
