--- a/sections/es/rules.html
+++ b/sections/es/rules.html
@@ -5,6 +5,7 @@
 	<title>Rules</title>
 	<link rel="stylesheet" type="text/css" href="../../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../../css/rules.css">
+	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico" />
 </head>
 <body bgcolor="#3b3b3b">
 	<div class="head">
