--- a/sections/es/staff.html
+++ b/sections/es/staff.html
@@ -4,6 +4,7 @@
 	<title>Staff</title>
 	<link rel="stylesheet" type="text/css" href="../../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../../css/staff.css">
+	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico" />
 </head>
 <body bgcolor="#3b3b3b">
 	<div class="head">
