Add rules reference from staff page

--- a/sections/en/staff.html
+++ b/sections/en/staff.html
@@ -15,17 +15,17 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="lang_ref" class="ref">Rules</a>
+			<a class="ref" href="rules.html">Rules</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="lang_ref" class="ref">Shop</a>
+			<a class="ref">Shop</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="lang_ref" class="ref" title="Server Development" href="https://github.com/ElMedievo" target="blank">Github</a>
+			<a class="ref" title="Server Development" href="https://github.com/ElMedievo" target="blank">Github</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
