--- a/sections/es/staff.html
+++ b/sections/es/staff.html
@@ -15,7 +15,7 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Reglas</a>
+			<a class="ref" href="rules.html">Reglas</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
