--- a/sections/fr/staff.html
+++ b/sections/fr/staff.html
@@ -16,7 +16,7 @@
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
-			<a class="ref">Les règles</a>
+			<a class="ref" href="rules.html">Les règles</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
 			<a>&nbsp;</a>
