--- a/sections/es/staff.html
+++ b/sections/es/staff.html
@@ -49,16 +49,19 @@
 		<p id="staff_desc">Jugadores que ayudan a llevar y mantener el servidor medieval</p>
 	</div>
 	<div class="admins">
-		<p>Administradores</p>
+		<p>Administrators</p>
 		<hr/>
 	</div>
 	<div>
 		<img id="bgmm" class="images" src="https://crafatar.com/avatars/92748c38-b41e-4f17-9d8f-50fd35599f2a?overlay"/>
 		<p class="bgmm"><b>BGMM</b></p>
+		<img id="esservil" class="images" src="https://crafatar.com/avatars/a4523451-5088-4192-b43a-0b9b56b740f7?overlay"/>
+		<p class="esservil"><b>Esservil</b></p>
 	</div>
+	<br/>
 	<div class="devs">
 		<a>&nbsp;</a>
-		<p>Desarrolladores</p>
+		<p>Developers</p>
 		<hr/>
 	</div>
 	<div>
@@ -69,34 +72,32 @@
 	</div>
 	<div class="sr_mods">
 		<a>&nbsp;</a>
-		<p>Senior Mods</p>
-		<hr/>
-	</div>
-	<div>
-		<img id="esservil" class="images" src="https://crafatar.com/avatars/a4523451-5088-4192-b43a-0b9b56b740f7?overlay"/>
-		<p class="esservil"><b>Esservil</b></p>
-	</div>
-	<div class="mods">
-		<a>&nbsp;</a>
-		<p>Moderadores</p>
+		<p>Senior Moderators</p>
 		<hr/>
 	</div>
 	<div>
 		<img id="ferrada" class="images" src="https://crafatar.com/avatars/5ecbb50f-560f-4a80-aabe-619da29f5e8a?overlay"/>
 		<p class="ferrada"><b>Ferrada</b></p>
+	</div>
+	<br/>
+	<div class="mods">
+		<a>&nbsp;</a>
+		<p>Moderators</p>
+		<hr/>
+	</div>
+	<div>
 		<img id="doce" class="images" src="https://crafatar.com/avatars/9e03cc2e-3d48-4dff-b38c-4dc55e011a1d?overlay"/>
 		<p class="doce"><b>12x2</b></p>
+		<img id="drakos" class="images" src="https://crafatar.com/avatars/4f89273b-7d68-4173-a3f2-9c4b8451da9b?overlay"/>
+		<p class="drakos"><b>drakos_</b></p>
 	</div>
 	<br/>
 	<br/>
 	<br/>
 	<br/>
 	<div class="jr_mods">
-		<p>Junior Mods</p>
+		<p>Junior Moderators</p>
 		<hr/>
 	</div>
 	<div>
-		<img id="drakos" class="images" src="https://crafatar.com/avatars/4f89273b-7d68-4173-a3f2-9c4b8451da9b?overlay"/>
-		<p class="drakos"><b>drakos_</b></p>
 	</div>
-</html>
